<resources>
    <string name="app_name">NotePad</string>
    <string name="add">Add</string>
    <string name="note_titulo">Titulo</string>
    <string name="menu_borrar">Borrar</string>
    <string name="menu_save">Guardar</string>
    <string name="title_activity_edit_delete_note">EditDeleteNote</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_edit">Editar</string>
    <string name="title_activity_list_note">ListNote</string>
    <string name="title_activity_description">Description</string>
    <string name="dialog_my_title">Seguro?</string>
    <string name="no_notes">Vacio ! Añadir notas con +</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_login">Login</string>
    <string name="prompt_name">Name</string>
</resources>